<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/dialog_end_flg_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioGroup android:id="@+id/rgEndFlag"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <RadioButton
                android:id="@+id/rbSetRn"
                android:text="@string/dialog_end_flg_rn"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/rbSetN"
                android:text="@string/dialog_end_flg_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/rbSetOther"
                android:text="@string/dialog_end_flg_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>
    </LinearLayout>

    <View
        android:background="@drawable/hr_gray_white"
        android:layout_width="match_parent"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:layout_height="1dip"/>
    <TextView
        android:text="@string/dialog_end_flg_hex_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/txtEndFlagValue"
        android:hint="@string/actCmdLine_hint_end_flg_val"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>