<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView android:id="@+id/tvSentCount"
        android:text="@string/text_sent"
        android:singleLine="true"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#23B129"
        android:gravity="center_horizontal"
        />
    <TextView android:id="@+id/tvReceivedCount"
        android:text="@string/text_received"
        android:singleLine="true"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#007AFF"
        android:textColor="#FFFFFF"
        android:gravity="center_horizontal"
        />
    <TextView android:id="@+id/tvConnectHoldTime"
        android:text="@string/text_running"
        android:singleLine="true"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFDA21"
        android:gravity="center_horizontal"
        />
</LinearLayout>