<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/layoutHeaderKeyboard"
        layout="@layout/header_data_count"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <include
        android:id="@+id/layoutControlButton"
        layout="@layout/layout_button_repeat"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_below="@id/layoutHeaderKeyboard"
        android:layout_above="@id/layoutControlButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tvKeyboardReceiveTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_receive_area_title"
                android:background="#DDDDDD"
                android:layout_alignParentTop="true"/>
            <ScrollView
                android:id="@+id/svKeyboardReceive"
                android:layout_below="@id/tvKeyboardReceiveTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:fadingEdge="vertical">
                <TextView
                    android:id="@+id/tvKeyboardReceive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_receive_data_wating"
                    android:singleLine="false"/>
            </ScrollView>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rlKeyboardSend"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tvKeyboardSendTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_send_area_title"
                android:background="#DDDDDD"
                android:layout_alignParentTop="true"/>
            <ScrollView
                android:id="@+id/svKeyboardSend"
                android:layout_below="@id/tvKeyboardSendTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:fadingEdge="vertical">
                <TextView
                    android:id="@+id/tvKeyboardSend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_send_int_keyboard"
                    android:singleLine="false"/>
            </ScrollView>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>